<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_voto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/title_voto"/>

    <EditText
        android:id="@+id/input_prontuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_voto"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_prontuario"
        android:inputType="text"/>

    <EditText
        android:id="@+id/input_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_prontuario"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_nome"
        android:inputType="text"/>

    <RadioGroup
        android:id="@+id/radiogroup_votos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_nome"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <RadioButton
            android:id="@+id/radio_ruim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_ruim"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <RadioButton
            android:id="@+id/radio_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_regular"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <RadioButton
            android:id="@+id/radio_bom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_bom"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radio_otimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_otimo"
            android:textStyle="bold"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_registrar_voto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup_votos"
        android:layout_marginTop="40dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/button_registrar_voto"
        />

    <TextView
        android:id="@+id/descricao_codigo_verificacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_registrar_voto"
        android:layout_marginTop="35dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/codigo_verificacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descricao_codigo_verificacao"
        android:layout_marginTop="60dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/button_checar_voto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codigo_verificacao"
        android:layout_marginTop="60dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/button_checar"
        />


</androidx.constraintlayout.widget.ConstraintLayout>