<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16dp" />

    <Button
        android:id="@+id/participar_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textAlignment="center"
        android:text="@string/button_participar"
        android:layout_marginTop="36dp"/>

    <Button
        android:id="@+id/checar_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/participar_button"
        app:layout_constraintEnd_toEndOf="@id/participar_button"
        app:layout_constraintTop_toBottomOf="@id/participar_button"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textAlignment="center"
        android:text="@string/button_checar"/>

    <Button
        android:id="@+id/finalizar_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/checar_button"
        app:layout_constraintEnd_toEndOf="@id/checar_button"
        app:layout_constraintTop_toBottomOf="@id/checar_button"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textAlignment="center"
        android:text="@string/button_finalizar"/>

</androidx.constraintlayout.widget.ConstraintLayout>