<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_checar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/title_checar"
        />

    <TextView
        android:id="@+id/label_voto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_checar"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:textStyle="normal"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/label_voto"
        />

    <TextView
        android:id="@+id/text_voto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_voto"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/label_inserir_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_voto"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/label_inserir_codigo"
        />

    <EditText
        android:id="@+id/input_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_inserir_codigo"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_codigo"
        android:inputType="text"/>

    <Button
        android:id="@+id/button_finalizar_pesquisa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_codigo"
        android:layout_marginTop="40dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/button_finalizar"
        />



</androidx.constraintlayout.widget.ConstraintLayout>